# rksi_hackotone

./: .env.example  .gitignore  Dockerfile.base  Dockerfile.multistage  LICENSE  docker-compose.yml
api-gateway/: .env.test  TEST_ADMIN_FIXES.md  docker-entrypoint-worker.sh  docker-entrypoint.sh  main.py  pyproject.toml  run_admin_tests.sh
api-gateway/alembic/versions/: 001_initial_schema.py  002_add_metric_categories.py  003_change_metric_category_cascade.py  004_add_metric_synonyms.py  005_change_extracted_metric_cascade.py  006_add_weight_table_needs_review.py  007_add_metric_audit_log.py  008_add_metric_moderation_status.py  009_add_metric_embedding_pgvector.py  010_add_report_extract_warnings.py  011_add_canonical_metric_id.py  017_add_department_weight_table.py  a1c2d3e4f5g6_add_paired_metrics_and_migrate_data.py
api-gateway/app/cli/: generate_template.py
api-gateway/app/clients/: __init__.py  exceptions.py  openrouter.py  openrouter_pool.py
api-gateway/app/core/: ai_factory.py  celery_app.py  config.py  prompt_loader.py
api-gateway/app/db/: celery_session.py  models.py
api-gateway/app/repositories/: metric.py  metric_audit.py  metric_category.py  metric_synonym.py  organization.py  prof_activity.py  scoring_result.py
api-gateway/app/routers/: __init__.py  admin.py  auth.py  metric_categories.py  metric_synonyms.py  metrics.py  organizations.py  participants.py  reports.py  scoring.py
api-gateway/app/schemas/: audit.py  auth.py  final_report.py  metric.py  metric_category.py  metric_generation.py  metric_import.py  metric_synonym.py  organization.py  participant.py  report.py
api-gateway/app/services/: auth.py  canonical_metric.py  docx_to_pdf.py  embedding.py  metric_generation.py  metric_import_export.py  metric_localization.py  metric_mapping.py  metric_mapping_decision_prompts.py  metric_mapping_llm_decision.py  organization.py  pdf_generator.py  prof_activity.py  report.py  report_pdf_extraction.py  report_pdf_prompts.py  report_rag_mapping.py  scoring.py  semantic_dedup.py  vision_prompts.py
api-gateway/app/tasks/: __init__.py  embedding.py  extraction.py  metric_generation.py
api-gateway/app/templates/: final_report_v1.html
api-gateway/scripts/: add_metric_synonyms.py  migrate_duplicate_metrics.py
api-gateway/static/: index.html
api-gateway/static/assets/: AdminAuditLogView-B-RUUjHg.css  AdminAuditLogView-BHfYq_dM.js  AdminAuditLogView-BYorBxZ7.js  AdminAuditLogView-BjQQwDVy.css  AdminAuditLogView-Bm8WF57W.css  AdminAuditLogView-Bw4NlHHw.js  AdminAuditLogView-C_8rXEdl.js  AdminAuditLogView-CpVK2DUo.js  AdminAuditLogView-DOc2LZKt.css  (+456 more)
api-gateway/tests/: conftest.py  test_admin.py  test_admin_fix_summary.md  test_auth.py  test_config_metric_mapping.py  test_config_report_rag.py  test_docx_to_pdf_util.py  test_embedding.py  test_embedding_batch.py  test_metric_categories.py  test_metric_mapping_batch_decision.py  test_metric_synonyms.py  test_metrics.py  test_paired_metrics.py  test_participants.py  test_prof_activities.py  test_prompt_loader.py  test_prompts_path.py  test_report_pdf_prompts.py  test_reports.py  test_reports_warning_fields.py  test_scoring.py  test_service_docx_extraction.py  test_service_docx_to_pdf.py  test_service_metric_extraction.py  test_service_scoring.py  test_vision_prompts.py  test_weights.py
(+48 files in other folders)
